--- a/cvpr_submission/bibliography.bib
+++ b/cvpr_submission/bibliography.bib
@@ -399,6 +399,14 @@
 	year   = {2017},
 }
 
+
+@article{malinowski2018visual,
+	title={The visual QA devil in the details: The impact of early fusion and batch norm on clevr},
+	author={Malinowski, Mateusz and Doersch, Carl},
+	journal={arXiv preprint arXiv:1809.04482},
+	year={2018}
+}
+
 @InProceedings{malinowski2014multi,
 	author    = {Malinowski, Mateusz and Fritz, Mario},
 	title     = {A multi-world approach to question answering about real-world scenes based on uncertain input},
