--- a/cvpr_submission/paper_main.tex
+++ b/cvpr_submission/paper_main.tex
@@ -32,12 +32,13 @@
 \def\Sec#1{Sec.~\ref{#1}}
 \def\fig#1{Fig.~\ref{#1}}
 \def\Fig#1{Fig.~\ref{#1}}
-\def\tableref#1{Table~\ref{#1}}
+\def\tab#1{Table~\ref{#1}}
+\def\Tab#1{Table~\ref{#1}}
 
 \newcommand{\tk}[1]{\textcolor{red}{TK: #1}}
 \newcommand{\ao}[1]{\textcolor{green}{AO: #1}}
 \newcommand{\tsj}[1]{\textcolor{magenta}{TSJ: #1}}
-\newcommand{\va}[1]{\textcolor{blue}{VM: #1}}
+\newcommand{\vm}[1]{\textcolor{blue}{VM: #1}}
 
 
 %%%%%%%%%%%%%%%
