Correcting typos in the introduction.

--- a/cvpr_submission/bibliography.bib
+++ b/cvpr_submission/bibliography.bib
@@ -508,4 +508,12 @@
 	year    = {2018},
 }
 
+@inproceedings{he2016deep,
+	title={Deep residual learning for image recognition},
+	author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+	pages={770--778},
+	year={2016}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
