--- a/cvpr_submission/introduction.tex
+++ b/cvpr_submission/introduction.tex
@@ -1,24 +1,23 @@
 \section{Introduction}
-During recent year neural networks, being the core of the so-called Deep Learning~\cite{lecun2015deep} revolution, became dominating solutions across many domains, from  speech recognition~\cite{graves2013speech}, to image classification~\cite{krizhevsky2012imagenet} to object detection~\cite{redmon2016you} to question answering~\cite{weston2014memory} to machine translation~\cite{bahdanau2014neural}.
-At their core, being statistical models~\cite{ripley1993statistical,warner1996understanding}, neural networks rely on the assumption that training and testing data are sampled from the same domain, i.e. operating in the same input space and with similar data distribution characteristics.
-However, in many real-world scenarios, this assumption does not hold and besides, as modern neural models often have  milions of trainable parameters (weights), their trainng reguires a vaist amount of data, which for some domains (e.g. medical) can be very expensive and/or extremely difficult to collect.
-One of the widely accepted solutions for the mentioned problems is Transfer Learning~\cite{pan2009survey,weiss2016survey}, a technique that enables improving of a model by transferring \emph{information} from one domain to the other. 
+In recent years, neural networks, at the heart of the Deep Learning~\cite{lecun2015deep} revolution, became dominating solutions across many domains, from  Speech Recognition~\cite{graves2013speech}, Image Classification~\cite{krizhevsky2012imagenet}, Object Detection~\cite{redmon2016you}, to Question Answering~\cite{weston2014memory} and Machine Translation~\cite{bahdanau2014neural}.
+At their core, being statistical models~\cite{ripley1993statistical,warner1996understanding}, neural networks rely on the assumption that training and testing samples are independant and identically distributed (iid); i.e they are sampled from the same domain, i.e. operating in the same input space and with similar data distribution characteristics.
+However, in many real-world scenarios, this assumption does not hold. Moreover, as modern neural models often have  millions of trainable parameters, training them requires a vast amount of data, which for some domains (notably medical) can be very expensive and/or extremely difficult to collect.
+One of the widely accepted solutions for the problems mentioned above is Transfer Learning~\cite{pan2009survey,weiss2016survey}, a technique which enables improving a model by transferring \emph{information} from one domain to another.
 
 %pan2009survey: we categorize transfer learning under three sub-settings: inductive transfer learning, transductive transfer learning and unsupervised transfer learning, 
 
-In Computer Vision, it became a standard to pretrain an image encoder (such as VGG~\cite{simonyan2014very}) on large scale datasets (like ImageNet~\cite{deng2009imagenet}), and transfer its weights to unrelated domains and tasks, such as e.g. Visual Question Answering (VQA) in medical domain~\cite{kornuta2019leveraging} or pixel-wise image segmentation of cars~\cite{iglovikov2018ternausnet}.
-The fact that such a transfer improves performance is quite fascinating, taking into account that both domain (natural images vs medical or images with cars) and task (image classification vs VQA or image segmentation) change (inductive transfer learning according to the taxonomy from~\cite{pan2009survey}).
+In Computer Vision, it is now standard practice to pre-train an image encoder (such as VGG~\cite{simonyan2014very}, or ResNet~\cite{he2016deep}) on large-scale datasets (such as ImageNet~\cite{deng2009imagenet}), and reuse the weights in unrelated domains and tasks, such as e.g. Visual Question Answering (VQA) in a medical domain~\cite{kornuta2019leveraging} or pixel-wise image segmentation of cars~\cite{iglovikov2018ternausnet}.
+The fact that such transfer improves performance is appealing, knowing that both the domain (natural images vs. medical ones or images with cars) and the task (image classification vs. VQA or image segmentation) can change significantly. This type of Transfer Learning is qualified as \emph{inductive}, according to the taxonomy from~\cite{pan2009survey}.
 
-A similar development can be observed in the Natural Language Processing (NLP) community.
-Using shallow word embeddings, such as word2vec~\cite{mikolov2013distributed} or GloVe~\cite{pennington2014glove}, pretrained on several large corpuses coming from e.g. Wikipedia or Twitter, became a standard procedure when working with different NLP domains and tasks.
-Recently, we can observe an explosion of deep contextualized word representations such as ELMo (based on bidirectional LSTM)~\cite{peters2018deep} or BERT (based on the Transformer architecture)~\cite{devlin2018bert}.
-Analogically to the pretrained image encoders, the community made an effort to ease the access to repositories with dozens of pretrained BERT variations, HugginFace~\cite{wolf2019transformers} being one of most notable examples.
+A similar development can be noted in the Natural Language Processing (NLP) community.
+Using shallow word embeddings, such as word2vec~\cite{mikolov2013distributed} or GloVe~\cite{pennington2014glove}, pretrained on large corpuses coming from e.g. Wikipedia or Twitter, became a standard procedure when working with different NLP domains and tasks, for some where labeled data is less accessible.
+Recently, we can denote an exponential development of deep contextualized word representations such as ELMo (based on bidirectional LSTMs)~\cite{peters2018deep} or BERT (based on the Transformer~\cite{vaswani2017attention} architecture)~\cite{devlin2018bert}, which pretrain an entire network (and not just the input layer) on very large amount of data.
+Analogically to the pretrained image encoders, the community made an effort to facilitate access to such pretrained models through repositories, some with dozens of pretrained BERT variations. HuggingFace~\cite{wolf2019transformers} is one of the most notable examples.
 
-The success of transfer learning raises several questions, such as specifics of datasets used for the pretraining (in particular, ImageNet~\cite{huh2016makes}), or correlation of performances of models with different architectures in the source and target domains~\cite{kornblith2019better}.
-One of most systematic works analysing the impact of transfer learning in Computer Vision is the computational taxonomic map for task transfer learning~\cite{zamir2018taskonomy}, aiming at discovering the dependencies across a dictionary of twenty six 2D, 2.5D, 3D, and
-semantic tasks.
+The success of transfer learning raises several questions, such as which characteristics make a dataset eligible to be used for pretraining (in particular, ImageNet~\cite{huh2016makes}), or the correlation observed in the performances of models with different architectures between the source and target domains~\cite{kornblith2019better}.
+One of the most systematic publications studying the impact of Transfer Learning in Computer Vision is the computational taxonomic map for task transfer learning~\cite{zamir2018taskonomy}, aiming at discovering the dependencies across a dictionary of twenty six 2D, 2.5D, 3D, and semantic tasks.
 
-The impact of transfer learning is even more important in the case of multi-modal tasks~\cite{mogadala2019trends} combining both of the mentioned modalities (i.e. vision and language).
+The impact of Transfer Learning is even more crucial in the case of multi-modal tasks~\cite{mogadala2019trends} combining both of the modalities mentioned above (i.e. vision and language).
 One of the most popular problem domain is Visual Question Answering (VQA)~\cite{malinowski2014multi,antol2015vqa}, where the system is expected to answer questions expressed in natural language by taking into account the content of a single image (Image Question Answering) or a video (Video Question Answering).
 In a typical VQA model, disregarding whether it is performing an early fusion of embeddings of those two modalities~\cite{malinowski2018visual} or multi-step reasoning~\cite{hudson2018compositional}, using pretrained image encode and word embeddings is de facto standard, proven empirically its dominance over the models trained from the scratch.
 
