--- a/cvpr_submission/bibliography.bib
+++ b/cvpr_submission/bibliography.bib
@@ -44,7 +44,6 @@
 }
 
 
-
 @inproceedings{deng2009imagenet,
 	title={Imagenet: A large-scale hierarchical image database},
 	author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and Fei-Fei, Li},
@@ -532,12 +531,15 @@
   year={2016}
 }
 
-@article{kornuta2019leveraging,
-  title={Leveraging Medical Visual Question Answering with Supporting Facts},
-  author={Kornuta, Tomasz and Rajan, Deepta and Shivade, Chaitanya and Asseman, Alexis and Ozcan, Ahmet S},
-  journal={arXiv preprint arXiv:1905.12008},
-  year={2019}
+@inproceedings{desta2018object,
+  title={Object-based reasoning in VQA},
+  author={Desta, Mikyas T and Chen, Larry and Kornuta, Tomasz},
+  booktitle={2018 IEEE Winter Conference on Applications of Computer Vision (WACV)},
+  pages={1814--1823},
+  year={2018},
+  organization={IEEE}
 }
+
 
 @inproceedings{teney2017graph,
   title={Graph-structured representations for visual question answering},
@@ -662,7 +664,5 @@
   year={2019},
   publisher={IEEE}
 }
-
-
 
 @Comment{jabref-meta: databaseType:bibtex;}
