--- a/cvpr_submission/bibliography.bib
+++ b/cvpr_submission/bibliography.bib
@@ -44,6 +44,7 @@
 }
 
 
+
 @inproceedings{deng2009imagenet,
 	title={Imagenet: A large-scale hierarchical image database},
 	author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and Fei-Fei, Li},
@@ -515,147 +516,15 @@
 	year={2016}
 }
 
-@inproceedings{xiong2016dynamic,
-  title={Dynamic memory networks for visual and textual question answering},
-  author={Xiong, Caiming and Merity, Stephen and Socher, Richard},
-  booktitle={International conference on machine learning},
-  pages={2397--2406},
-  year={2016}
-}
-
-@inproceedings{yang2016stacked,
-  title={Stacked attention networks for image question answering},
-  author={Yang, Zichao and He, Xiaodong and Gao, Jianfeng and Deng, Li and Smola, Alex},
-  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
-  pages={21--29},
-  year={2016}
-}
-
-@inproceedings{desta2018object,
-  title={Object-based reasoning in VQA},
-  author={Desta, Mikyas T and Chen, Larry and Kornuta, Tomasz},
-  booktitle={2018 IEEE Winter Conference on Applications of Computer Vision (WACV)},
-  pages={1814--1823},
-  year={2018},
-  organization={IEEE}
-}
-
-
-@inproceedings{teney2017graph,
-  title={Graph-structured representations for visual question answering},
-  author={Teney, Damien and Liu, Lingqiao and van den Hengel, Anton},
-  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
-  pages={1--9},
-  year={2017}
-}
-
-@inproceedings{santoro2017simple,
-  title={A simple neural network module for relational reasoning},
-  author={Santoro, Adam and Raposo, David and Barrett, David G and Malinowski, Mateusz and Pascanu, Razvan and Battaglia, Peter and Lillicrap, Timothy},
-  booktitle={Advances in neural information processing systems},
-  pages={4967--4976},
-  year={2017}
-}
-
-@article{zhou2015simple,
-  title={Simple baseline for visual question answering},
-  author={Zhou, Bolei and Tian, Yuandong and Sukhbaatar, Sainbayar and Szlam, Arthur and Fergus, Rob},
-  journal={arXiv preprint arXiv:1512.02167},
-  year={2015}
-}
-
-
-@article{fukui2016multimodal,
-  title={Multimodal compact bilinear pooling for visual question answering and visual grounding},
-  author={Fukui, Akira and Park, Dong Huk and Yang, Daylen and Rohrbach, Anna and Darrell, Trevor and Rohrbach, Marcus},
-  journal={arXiv preprint arXiv:1606.01847},
-  year={2016}
-}
-
-@article{kim2016hadamard,
-  title={Hadamard product for low-rank bilinear pooling},
-  author={Kim, Jin-Hwa and On, Kyoung-Woon and Lim, Woosang and Kim, Jeonghee and Ha, Jung-Woo and Zhang, Byoung-Tak},
-  journal={arXiv preprint arXiv:1610.04325},
-  year={2016}
-}
-
-@inproceedings{yu2017multi,
-  title={Multi-modal factorized bilinear pooling with co-attention learning for visual question answering},
-  author={Yu, Zhou and Yu, Jun and Fan, Jianping and Tao, Dacheng},
-  booktitle={Proceedings of the IEEE international conference on computer vision},
-  pages={1821--1830},
-  year={2017}
-}
-
-@inproceedings{ben2017mutan,
-  title={Mutan: Multimodal tucker fusion for visual question answering},
-  author={Ben-Younes, Hedi and Cadene, R{\'e}mi and Cord, Matthieu and Thome, Nicolas},
-  booktitle={Proceedings of the IEEE international conference on computer vision},
-  pages={2612--2620},
-  year={2017}
-}
-
-@article{chen2015abc,
-  title={Abc-cnn: An attention based convolutional neural network for visual question answering},
-  author={Chen, Kan and Wang, Jiang and Chen, Liang-Chieh and Gao, Haoyuan and Xu, Wei and Nevatia, Ram},
-  journal={arXiv preprint arXiv:1511.05960},
-  year={2015}
-}
-
-@article{ilievski2016focused,
-  title={A focused dynamic attention model for visual question answering},
-  author={Ilievski, Ilija and Yan, Shuicheng and Feng, Jiashi},
-  journal={arXiv preprint arXiv:1604.01485},
-  year={2016}
-}
-
-@article{hudson2019learning,
-  title={Learning by abstraction: The neural state machine},
-  author={Hudson, Drew A and Manning, Christopher D},
-  journal={arXiv preprint arXiv:1907.03950},
-  year={2019}
-}
-
-
-@inproceedings{kim2018dynamic,
-  title={Dynamic graph generation network: Generating relational knowledge from diagrams},
-  author={Kim, Daesik and Yoo, YoungJoon and Kim, Jee-Soo and Lee, Sangkuk and Kwak, Nojun},
-  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
-  pages={4167--4175},
-  year={2018}
-}
-
-@inproceedings{mun2017marioqa,
-  title={Marioqa: Answering questions by watching gameplay videos},
-  author={Mun, Jonghwan and Hongsuck Seo, Paul and Jung, Ilchae and Han, Bohyung},
-  booktitle={Proceedings of the IEEE International Conference on Computer Vision},
-  pages={2867--2875},
-  year={2017}
-}
-
-@inproceedings{xu2017video,
-  title={Video question answering via gradually refined attention over appearance and motion},
-  author={Xu, Dejing and Zhao, Zhou and Xiao, Jun and Wu, Fei and Zhang, Hanwang and He, Xiangnan and Zhuang, Yueting},
-  booktitle={Proceedings of the 25th ACM international conference on Multimedia},
-  pages={1645--1653},
-  year={2017},
-  organization={ACM}
-}
-
-@inproceedings{yu2017end,
-  title={End-to-end concept word detection for video captioning, retrieval, and question answering},
-  author={Yu, Youngjae and Ko, Hyungjin and Choi, Jongwook and Kim, Gunhee},
-  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
-  pages={3165--3173},
-  year={2017}
-}
-
-@article{yin2019memory,
-  title={Memory Augmented Deep Recurrent Neural Network for Video Question Answering},
-  author={Yin, Chengxiang and Tang, Jian and Xu, Zhiyuan and Wang, Yanzhi},
-  journal={IEEE transactions on neural networks and learning systems},
-  year={2019},
-  publisher={IEEE}
+@article{caruana1997multitask,
+	title={Multitask learning},
+	author={Caruana, Rich},
+	journal={Machine learning},
+	volume={28},
+	number={1},
+	pages={41--75},
+	year={1997},
+	publisher={Springer}
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
