--- a/cvpr_submission/introduction.tex
+++ b/cvpr_submission/introduction.tex
@@ -26,14 +26,19 @@ In this work, we are focusing on a parallel aspect of transfer learning. As both
 \paragraph{Contributions}
 
 The contributions of this paper are as follows.
-We propose a new model called SAMNet, that achieves state-of-the-art results on two datasets for Visual Reasoning, namely CLEVR~\cite{johnson2017clevr}, a diagnostic dataset for Image QA, and COG~\cite{yang2018dataset}, a Video QA reasoning.
-Next we show how different tasks impact when transfering the whole pretrained model in three main setups.
-In the first one focus on transfer learning within the Image QA domain and perform experiment similar to Taskonomy~\cite{zamir2018taskonomy} and analyse how training exclusively on one task family helps with mastering other family, with once but crucial difference: we transfer and fine-tune the whole model (not only the encoder).
-In the second we show a complementary results in a multi-task learning setup, when the model is trained on all-but-one task and then tested on this task (with and without finetuning).
-Finally, we present a set of experiments aimed at analysis of the impact of transfer learning in Video QA, when domain changes drastically and system has to deal with longer videos with higher complexity (understood as number of distractors present in each frame).
-%Surprisingly, our model with only small fine-tuning, managed to the master Hard variant and achieved higher accuracy than the model trained explicitly on Hard variant from the scratch.
+We propose a new model, called SAMNet (Selective Attention Memory Network), which achieves state-of-the-art results on two datasets for Visual Reasoning, namely CLEVR~\cite{johnson2017clevr}, a diagnostic dataset for Image QA, and COG~\cite{yang2018dataset}, a Video QA reasoning dataset.
+We show the impact of the different tasks when transferring the whole pretrained model in three main setups.
+\begin{itemize}
+	\item We first focus on transfer learning within the Image QA domain and perform experiments similar to Taskonomy~\cite{zamir2018taskonomy}. We analyze how training exclusively on one task family helps with mastering the others, with one notable difference: we transfer and fine-tune the whole model (not only the encoder or input layer).
+	\item Next, we show complementary results in a multi-task learning setup, when the model is trained on all-but-one task and then tested on this task (with and without finetuning).
+	\item Finally, we present a set of experiments aimed at analyzing of the impact of transfer learning in Video QA, when domain changes drastically and the model is forced to handle longer videos with higher complexity (i.e. a higher number of distractor objects present in each frame).
+\end{itemize}
+Surprisingly, our model with only small fine-tuning, managed to the master Hard variant and achieved higher accuracy than the model trained explicitly on Hard variant from the scratch.
 
 \tk{Have I addressed that correctly? I am not sure whether I have covered TL with CoGenT-A and CoGenT-B variants...}
+
+\vm{I think the contributions should be: 1. A new model with SotA results on COG |  2. transfer  / multitask learning  in COG | 3.  transfer  / multitask learning  in CLEVR | 4. Ablation study ("all-but-one") in CLEVR and the limitations of transfer learning (e.g. the labels domains should be aligned)}.
+
 %A) Task generalization
 %- answers (CLEVR)
 %B) Domain adaptation
@@ -59,24 +64,3 @@ Finally, we present a set of experiments aimed at analysis of the impact of tran
 %conclusions:
 %when you are doing transfer make sure that the target answers are the same!
 %otherwise: binary y/n vs numers 0-7 vs names of attributes
-
-
-
-\section{Related work -- import}
-%Integration of vision and language in deep neural network models allows the system to learn joint representations of objects, concepts, and relations.  Potentially, this approach can lead us towards Harnad's \textit{symbol grounding problem}~\cite{harnad2003symbol} but we are quite far from achieving the full capabilities of visually grounded language learning.
-
-%Recently, there is a growing interest in neuro-symbolic approaches, which can combine the power of representation learning and symbolic logic that is interpretable \cite{mao2019neurosymbolic}. These approaches focus on \textit{symbol manipulation} rather than learning \textit{grounded symbols}.  Furthermore, symbolic priors (e.g., domain knowledge) and integration of logic depend on hand-crafted modules.  In the near term, this direction is certainly promising and can address some of the shortcomings of machine learning (i.e., the lack of explainability)\cite{vedantam2019probabilistic}.  However, in the long run, the desire is to learn grounded representations, which may lead to the emergence of symbols \cite{taniguchi2018symbol}.
-
-Starting with Image Question Answering~\cite{malinowski2014multi,antol2015} and Image Captioning~\cite{karpathy2015deep}, a variety of tasks that integrate vision and language have appeared in the past several years~\cite{mogadala2019trends}. 
-Those directions include e.g., Video QA~\cite{MovieQA} and Video Action Recognition~\cite{monfort2019moments}, that provide an additional challenge of understanding \emph{temporal} aspects, and Video Reasoning~\cite{song2018explore,yang2018dataset}, that tackles both spatial (comparison of object attributes, counting and other relational question) and temporal aspects and relations (e.g. object disappearance).
-To deal with the temporal aspect most studies typically cut the whole video into clips; e.g., in~\cite{song2018explore} the model extracts visual features from each frame and aggregates features first into clips, followed by aggregation over clips to form a single video representation.
-Still, when reasoning and producing the answer, the system in fact has \textit{access to all frames}. 
-Similarly, in Visual Dialog~\cite{das2017visual} the system memorizes the whole dialog history.
-However, in real-time dialog or video monitoring, it is not always possible to keep the entire history of conversation nor all frames from the beginning of the recording.  
-
-
-As evident from human cognition, attention and memory are the key competencies required to solve these problems, and unsurprisingly, the AI research is rapidly growing in these areas.
-The ability to deal with temporal casuality can pose a challenge for also in pure natural language processing (NLP) settings, e.g. in question answering (QA) and dialog applications.  
-Current NLP solutions, in many problem settings, work around this challenge by processing the entire text input and reason over it multiple times using attention \cite{vaswani2017attention} or other mechanisms.
-For example, typical solutions to the bAbI reasoning task, such as Memory Networks \cite{weston2014memory}, involve processing all the supporting facts at once and keeping them in memory all the time while searching for the answer.
-
