Reverted modifications to the Related Work section.

--- a/cvpr_submission/introduction.tex
+++ b/cvpr_submission/introduction.tex
@@ -37,7 +37,7 @@ Surprisingly, our model with only small fine-tuning, managed to the master Hard 
 
 \tk{Have I addressed that correctly? I am not sure whether I have covered TL with CoGenT-A and CoGenT-B variants...}
 
-\vm{I think the contributions should be: 1. A new model with SotA results on COG |  2. transfer  / multitask learning  in COG | 3.  transfer  / multitask learning  in CLEVR | 4. Ablation study ("all-but-one") in CLEVR and the limitations of transfer learning (e.g. the labels domains should be aligned)}.
+\vm{I think the contributions should be: 1. A new model with SotA results on COG |  2. transfer  / multitask learning  in COG | 3.  transfer  / multitask learning  in CLEVR}.
 
 %A) Task generalization
 %- answers (CLEVR)
