--- a/cvpr_submission/paper_main.tex
+++ b/cvpr_submission/paper_main.tex
@@ -87,10 +87,12 @@
 \newcommand{\Reals}{\mathbb{R}}
 
 \renewcommand{\vec}[1]{\mathbf{#1}}
-\newcommand{\vx}{\vec{x}}
-\newcommand{\vy}{\vec{y}}
+\newcommand{\vc}{\vec{c}}
+\newcommand{\vso}{\vec{so}}
 \newcommand{\vone}{\vec{1}}
 \newcommand{\proj}{\mathrm{proj}}
+\newcommand{\vx}{\vec{x}}
+\newcommand{\vy}{\vec{y}}
 
 \newcommand{\imatch}{g^{\mathrm{v}}}
 \newcommand{\mmatch}{g^{\mathrm{m}}}
